syntax = "proto3";

package MemberRoomPackage;

import "./ChatObjects.proto";

message AddRequest {
    string roomId = 1;
    repeated string membersId = 2;
}

message LeaveRequest {
    string roomId = 1;
}

message MemberRoomList {
    repeated MemberRoomObject members = 1;
}

service MemberRoom {
    rpc Add (AddRequest) returns (MemberRoomList);
    rpc Leave (LeaveRequest) returns (MemberRoomObject);
}